# OntoCodex_Trial_Enhancer

./: .env  =0.0.45  README.md  devshell.sh  environment.yml  pyproject.toml  run.sh  structure.md
artifacts/: evidence.jsonl  evidence_alias.jsonl  evidence_extract_test.jsonl  evidence_gemini.jsonl  evidence_ollama.jsonl  evidence_snomedct.jsonl  evidence_virtual_trial.jsonl  trial_parser.json  trial_parser_fullpage.json  trial_parser_prompt2.json  trial_parser_strict.json
configs/: ontocodex.yaml  ontocodex_trial_fullpage.yaml
data/: MCC_CDE.xml  atc_omop.csv  cpt-codes-mayo.csv  evidence.py  medDRA.xlsx  trial_codes.csv
multiagent_env/: pyvenv.cfg
src/ontocodex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ontocodex/agents/: decision_agent.py  graph.py  knowledge_agent.py  knowledgebase_agent.py  ontology_reader_agent.py  owl_utils.py  script_agent.py  state.py  terminology_agent.py  trial_orchestrator_agent.py  trial_parser_agent.py  utils.py  validator_agent.py
src/ontocodex/cli/: run_local.py
src/ontocodex/engine/: evidence_log.py  graph.py  state.py
src/ontocodex/io/: owl_writer.py
src/ontocodex/kb/: evidence.py  kb_api.py  ontology_store.py  terminology_store.py  trial_codes_store.py  vector_store.py
src/ontocodex/providers/: __init__.py  local_llm.py
src/ontocodex/tests/: test_atc.sh  test_loinc.sh  test_snomed.sh  test_terminology_store.py
test_bash/: ollam.bash  trial_protocol_fullpage.txt
