[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ontocodex"
version = "0.1.0"
description = "OntoCodex local implementation"
requires-python = ">=3.9"
dependencies = [
  "pydantic",
  "pandas",
  "rdflib",
  "requests",
  "pyyaml",
  "openpyxl",
  "langgraph",
  "langchain",
  "python-dotenv",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
